appId: com.oreku.reactnativeshowcase
---
- launchApp
- assertVisible: Showcase
- tapOn: Switch
- assertVisible:
    id: progressive-blur-header
- assertVisible: CUSTOM
- assertVisible:
    id: switch-solid
